k8s_manifests/qbittorrent/http-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-qbittorrent-vpn-proxy
  namespace: qbittorrent-app
  labels:
    helm.sh/chart: qbittorrent-vpn-0.7.1
    app.kubernetes.io/name: qbittorrent-vpn
    app.kubernetes.io/instance: my-qbittorrent-vpn
    app.kubernetes.io/version: "5.1.4"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8888
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: qbittorrent-vpn
    app.kubernetes.io/instance: my-qbittorrent-vpn
