k8s_manifests/qbittorrent/qb-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qb-ingressroute
  namespace: qbittorrent-app
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`qb.fahmed.org`)
      services:
        - name: my-qbittorrent-vpn
          port: 8080
  tls:
    secretName: qb-tls
